tests/NormalTests/paczka1/fuzzy1/67157161.err
Error in line 2: S645 S484 14,9
Error in line 1: Ino S482 72,4
Error in line 8: JsIaRwbz S484 33,1
Error in line 10: Ino S484 12,5
Error in line 18: Ino S484 60,5
Error in line 29: ql6x S482 47,29
Error in line 30: zRjdPPqDtI S645 3,5
Error in line 32: zRjdPPqDtI A394 23,6
Error in line 25: JsIaRwbz S484 42,0
